# TorchVLAD

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
tests/: __init__.py
torchvlad/: __about__.py  __init__.py  __main__.py  func.py  imagefolder.py  kmeans.py  sift.py  vlad.py
