[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TorchVLAD"
description = 'A Pytorch implementation of Vector of Locally Aggregated Descriptors (VLAD).'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ['pytorch', 'vlad', 'vector of locally aggregated descriptors']
authors = [
  { name = "Zegang Cheng", email = "zc2309@nyu.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "kornia",
  "pandas",
  "Pillow",
  "pykeops",
  "torch>=1.13.*",
  "torchvision>=0.14.*",
  "tqdm",
  "pandas",
  "numpy",
  "click",
  "matplotlib",
  "jupyter",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/chengzegang/pytorch-vlad#readme"
Issues = "https://github.com/chengzegang/pytorch-vlad/issues"
Source = "https://github.com/chengzegang/pytorch-vlad"

[tool.hatch.version]
path = "pytorch_vlad/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pytorch_vlad --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "pytorch_vlad/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
